# VentriculostomyPlanning

./: .gitignore  CMakeLists.txt  README.md
LabelMapBinning/: CMakeLists.txt  LabelMapBinning.py
SkullRemoval/: CMakeLists.txt  SkullRemoval.py
SlicerCaseManager/: CMakeLists.txt  SlicerCaseManager.py
VentriculostomyPlanning/: CMakeLists.txt  HoleCylinder.STL  NeedleGuideModel.STL  NeedleGuideModel2.STL  NeedleGuideModelNoHoles.STL  PilotHolesTemplate.STL  PilotHolesTemplate1.STL  PilotHolesTemplate2.STL  PilotHolesTemplate3.STL  PilotHolesTemplate4.STL  SlicerCaseManager.py  VentriculostomyPlanning.py
VentriculostomyPlanning/Blender/: FaceMaskBoolean.py  RunBoolean.bat  requirements.txt
VentriculostomyPlanning/NiftyNet/: CT_Inference.csv  RunSegmentation.bat  brainVesselSegApp.py  vesselSeg.ini
VentriculostomyPlanning/VentriculostomyPlanningUtils/: Constants.py  PopUpMessageBox.py  SlicerCaseManager.py  UsefulFunctions.py  UserEvents.py  VentriclostomyButtons.py  WatchDog.py
